# particle-musings

./: .gitignore  easy-eco.html  extract_gdoc_urls.py  file.txt  gdoc_summary.txt  gdoc_urls.tsv  gdoc_urls.txt  index.html  md_to_html (1).py  md_to_html.py  organize_gdocs_by_date.py  page.template.html  progress.txt  rename_gdoc_files.py  temp_update_links.py  tune_references.py  tune_references_E.py  tune_references_again.py  update_image_paths.py
Economy/: 01_okane_no_shotai.html  02_shakkin_kinishinai.html  03_kokusai_hikuteamata.html  04_okane_dokokara.html  06_inflate_deflate.html  07_kawase_rate.html  08_kinyu_vs_jittai.html  116882884#big_0.html  116882884#big_1.html  116882884#big_2.html  127014285#big_8.html  2025本予算検証.html  60年償還ルール.html  JA考察.html  PCメーカー考察.html  economy_trilemma.html  index.html  markdowntohtml.com.html  newfile.html  q_and_a.html  q_and_a_complete.html  【平易版】消費税批判.html  【補助】外国援助の仕組みを知ろう！.html  おコメの値段.html  アイヌ差別総括.html  コメ価格高騰問題考察.html  テスト.html  フィアット説明資料.html  ベトナム考察.html  ベトナム考察参考資料.html  ベーシックインカム.html  万博考察（GW終了時点）.html  中国分析（20250408）.html  中国経済考察2020505.html  中学生向け.html  信用創造解説（暫定）.html  信用創造解説（途中）.html  信用創造説明 (1).html  信用創造説明 (2).html  僕の考えた最強の説明.html  (+39 more)
Economy/0930/: 0908-Before.html  0909.html  Ark-R-Part1-Overview.html  Ark-R-Part2-Strategy.html  DailyReport.html  Report-T-25.html  THP Part1-Overview.html  THP Part2-Strategy.html  THP-DEATH.html  THP-Part1-Overview.html  THP-Part2-Strategy.html  THP-lifeline.html  categories.txt  categories_escape.txt  html_index.json  index.html  intermediate-explanation.html  japann-panic.html  reference-materials.html  sanseito-threat-analysis.html  style.css  walpurgis-explanation.html  参政党危険性.html
Economy/0930-E/: Report-T-25 (1).html  Report-T-25 (2).html  Report-T-25.html  index (1).html  index (2).html  index.html  intermediate-explanation (1).html  intermediate-explanation (2).html  intermediate-explanation.html  reference-materials (1).html  reference-materials (2).html  reference-materials.html  sanseito-threat-analysis.html  walpurgis-explanation.html
IT_AI/: Grok_AI_etc.html  Think_about_AI_part1.html  index.html
Medical/: Medical_link.html  NB181_and_vaccine_policy.html  Omi_Rebuttal_to_Anti-Vax_Disinformation.html  corona_1.html  corona_2.html  debunking_anti_vaccine_myths.html  index.html  occult_treatments.html  pandemic.html  standard_care.html
World/: China_Collapse_ Diagrams.html  index.html  spider_web_attack.html
assets/: Style_contents.css  Style_root.css  Style_sub.css  style.css
docs/: MASTER-INDEX.md
political/: Crisis_of_Japan.html  index.html
src/agent/: Cargo.toml  forged_sender.rs  receive_signed.rs  send_message.rs  setup_agent.rs  signed_sender.rs
src/governance/: Cargo.toml  propose_override.rs  sign_override.rs
src/kairo-daemon/: Cargo.toml  config.rs  kairo_p_daemon.rs
src/kairof/: lib.rs  (+2 more)
src/mesh-node/: Cargo.toml  main.rs  seed_node.rs
src/server/: Cargo.toml  seed_node.rs  seed_node_mock.rs
src/server/src/: main.rs
tools/: fix_css_paths.py  refactor_reports.py  thp_publish.py  thp_render.py
(+590 files in other folders)
