[package]
name = "kairo_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2"
hex = "0.4.3"
rand = "0.8"
rand_core = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
chrono = "0.4"
p256 = { version = "0.13", features = ["ecdsa"] }

kairo_lib = { path = "../kairo-lib" }

[[bin]]
name = "setup_agent"
path = "setup_agent.rs"

[[bin]]
name = "signed_sender"
path = "signed_sender.rs"

[[bin]]
name = "send_message"
path = "send_message.rs"

[[bin]]
name = "receive_signed"
path = "receive_signed.rs"

[[bin]]
name = "forged_sender"
path = "forged_sender.rs"

