[package]
name = "kairo_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kairo_lib = { path = "../kairo-lib" }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = "2"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "kairo_p_daemon"
path = "kairo_p_daemon.rs"
