[package]
name = "kairo_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seed_node"
path = "seed_node.rs"

[[bin]]
name = "seed_node_mock"
path = "seed_node_mock.rs"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
once_cell = "1.19.0"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
hex = "0.4.3"
kairo_lib = { path = "../kairo-lib" }